--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       class="video-js vjs-default-skin vjs-big-play-centered"
       controls
     >
-      <source src="output.m3u8" type="application/vnd.apple.mpegurl" />
+      <source src="https://cdn.jsdelivr.net/gh/him41111/qptest/output.m3u8" type="application/vnd.apple.mpegurl" />
     </video>
     <script src="https://cdn.jsdelivr.net/npm/video.js@7.6.6/dist/video.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/videojs-hotkeys@0.2.25/videojs.hotkeys.min.js"></script>
